--- a/style.css
+++ b/style.css
@@ -27,13 +27,30 @@ main {
   position: relative;
   width: 100rem;
   height: 60rem;
+
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(200px);
-  filter: blur();
+  /* filter: blur(); */
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
   border-radius: 9px;
   overflow: hidden;
   display: flex;
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 35%;
+  }
+}
+@media only screen and (max-width: 450px) {
+  html {
+    font-size: 25%;
+  }
+}
+@media only screen and (max-width: 350px) {
+  html {
+    font-size: 19%;
+  }
 }
 
 .player {
